objects/redwing__Training_Track_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Community_Id__c</fullName>
        <label>Community Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Completed_On__c</fullName>
        <inlineHelpText>Date this assignment was completed</inlineHelpText>
        <label>Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>redwing__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Learning Trac Assignments</relationshipLabel>
        <relationshipName>Training_Track_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>redwing__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Training_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Trac</label>
        <referenceTo>redwing__Training_Track__c</referenceTo>
        <relationshipLabel>Learning Trac Assignments</relationshipLabel>
        <relationshipName>Training_Track_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Track_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Learning Trac Assignment</label>
    <nameField>
        <displayFormat>LTAS-{0000000}</displayFormat>
        <label>Learning Trac Assignment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Trac Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>